--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <p>K-Means is an iterative optimization algorithm that minimizes the objective function J during each iteration. However, there is no guarantee that the result from K-Means will achieve the global minimum; therefore, the result is not necessarily a global minimum, but only a local minimum. This reinforces why K-Means requires proper initialization.</p>
         
         <div class="figure-placeholder">
-            <img src="images/pic1.png" alt="Picture">
+            <img src="images/fig1.png" alt="Picture">
             <caption>synthetic 4-cluster dataset</caption><br>
             
         </div>
