--- a/index.html
+++ b/index.html
@@ -80,13 +80,11 @@
             font-size: 11pt;
         }
         .figure-placeholder {
-            background: #e8f4f8;
-            border: 2px dashed #0066cc;
-            padding: 40px;
-            text-align: center;
-            margin: 20px 0;
-            font-style: italic;
-            color: #0066cc;
+             max-width: 100%;
+             height: auto;
+             display: block;
+             margin: 0 auto;
+             border-radius: 6px; 
         }
         .references {
             margin-top: 40px;
@@ -191,8 +189,8 @@
         <div class="figure-placeholder">
             <img src="images/fig1.png" alt="Picture">
             <caption>synthetic 4-cluster dataset</caption><br>
-            
         </div>
+
         
         <p>The example synthetic dataset that we will be using for most of this tutorial consists of 500 data points created around 4 true cluster centroids.</p>
 
