--- a/index.html
+++ b/index.html
@@ -80,12 +80,23 @@
             font-size: 11pt;
         }
         .figure-placeholder {
-             max-width: 100%;
-             height: auto;
-             display: block;
-             margin: 0 auto;
-             border-radius: 6px; 
+            background: #e8f4f8;
+            border: 2px dashed #0066cc;
+            padding: 20px;
+            text-align: center;
+            margin: 20px 0;
+            font-style: italic;
+            color: #0066cc;
         }
+
+        .figure-placeholder img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto 8px;
+            border-radius: 6px;
+        }
+
         .references {
             margin-top: 40px;
         }
