--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
         <div class="figure-placeholder">
             <img src="images/fig7.png" alt="Picture">
-            <figcaption>K-Means Failure Case on Non-Spherical Data</figcaption
+            <figcaption>K-Means Failure Case on Non-Spherical Data</figcaption>
         </div>
         
         <p>As seen in Figure 7, K-Means is attempting to "cut" between the two moons using a straight line. Therefore, many points are found outside of their cluster, even though the two clusters are visually identifiable by a human observer. In this case, the distance from the central point, the centroid, is a poor criterion for determining cluster membership.</p>
